--- a/project/css.css
+++ b/project/css.css
@@ -26,6 +26,7 @@ body {
   background-color: #cd8d7b;
   border: 100%;
   color: rgba(255, 255, 255);
+  text-shadow: 1px 1px 3px rgb(78, 25, 25);
   text-align: center;
   font-size: 100%;
   padding: 20px;
@@ -68,6 +69,7 @@ body {
   width: 10%;
   background-color: #ffb2a7;
   color: rgb(255, 255, 255);
+  text-shadow: 1px 1px 3px rgb(78, 25, 25);
 }
 
 .wrapper { 
